Bug 347038 - KMail/KF5 message dialog shown again when closing dialog
Summary: KMail/KF5 message dialog shown again when closing dialog
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: message list (other bugs)
Version First Reported In: Git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks: kdepim-15.08
  Show dependency treegraph
 
Reported: 2015-05-02 06:58 UTC by Andreas Cord-Landwehr
Modified: 2015-07-05 12:57 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
the dialog (39.84 KB, image/png)
2015-05-02 09:32 UTC, Andreas Cord-Landwehr
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Cord-Landwehr 2015-05-02 06:58:32 UTC
Testing with KMail from Git master branch:
1. right click at the message list at a message
2. select in message dialog "Mark Message" -> "Mark Message as Important"
3. the dialog is closed, the message is marked as important, BUT a new message dialog is shown (now at a different position, though)

Reproducible: Always
Comment 1 Laurent Montel 2015-05-02 07:52:08 UTC
you spoke about menu no dialog ?
Comment 2 Andreas Cord-Landwehr 2015-05-02 09:32:45 UTC
Created attachment 92370 [details]
the dialog

I am speaking about this context dialog:
* at first right-click it is shown at the correct position
* when selecting the "mark as important" action, the dialog is closed, but the same dialog re-appears aligned to the bottom-left corner of the selected message in the message list
Comment 3 Laurent Montel 2015-07-05 12:57:56 UTC
Git commit ffbcc2b076ff9f970af51c7577ea64e561714530 by Montel Laurent.
Committed on 05/07/2015 at 12:57.
Pushed by mlaurent into branch 'master'.

Fix Bug 347038 - KMail/KF5 message dialog shown again when closing dialog

M  +2    -0    messagelist/core/view.cpp
M  +1    -1    messagelist/core/view.h

http://commits.kde.org/kdepim/ffbcc2b076ff9f970af51c7577ea64e561714530