Fix Bug 347038 - KMail/KF5 message dialog shown again when closing dialog

BUG: 347038